--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta name="author" content="" />
    
    <link href="style.css" rel="stylesheet" type="text/css" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 </head>
 
